<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/category"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cat_spin"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/cat_spin"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/category"
        app:layout_constraintBottom_toTopOf="@+id/unitSelector1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unitSelector1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/unit_selector1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/unit_spin1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/unit_spin1"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/unitSelector2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unitSelector2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/unit_selector2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/unit_spin2"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/unit_spin2"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="255dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>